--- a/pages/p8/958916.md
+++ b/pages/p8/958916.md
@@ -1,4 +1,4 @@
-### 从外物到内心的禅理(图)
+### 王阳明：越是艰难处 越是修心时(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,13 +7,12 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="禅理 灵魂 智慧 善良" src="https://img3.secretchina.com/pic/2020/9-11/p2773762a414678386-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="王阳明 心学 修心 心性" src="https://img3.secretchina.com/pic/2021/1-13/p2856171a211711437-ss.jpg" style="height:337px; width:599px"/>
   <br>
-   从外物到内心的
    <strong>
-    禅理
+    王阳明
    </strong>
-   。（以下图片来源：Adobe stock)
+   的朝服像。（图片来源：维基百科）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,64 +24,49 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://158.247.195.190:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://158.247.195.190:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.195.190/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.195.190:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://158.247.195.190:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://158.247.195.190:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://158.247.195.190:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://158.247.195.190:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《红墙的记忆》- 中南海万人和平上访纪实](http://158.247.195.190:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  黨不叫我們知道的那些事](http://158.247.195.190:10000/videos/news/truth02.html)
-
-#### [ 🔥  爲何中共舉國體制造芯片難以成功 ｜「透視中國」](http://158.247.195.190:10000/videos/news/don03.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
+  王守仁（1472年10月31日—1529年1月9日），汉族，幼名云，字伯安，别号阳明。浙江绍兴府余姚县（今属宁波余姚）人，因曾筑室于会稽山阳明洞，自号阳明子，学者称之为阳明先生，亦称王阳明。
+  <span href="https://zh.wikipedia.org/wiki/%E7%8E%8B%E5%AE%88%E4%BB%81">
+   王阳明
+  </span>
+  是明代思想家、军事家，
   <strong>
-   【01】一朵花的
-   <span href="https://www.secretchina.com/news/gb/tag/禅理" target="_blank">
-    禅理
-   </span>
+   心学
   </strong>
+  集大成者。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  有个禅师的弟子爱好打扮，每天都要在这方面耗费太多的时间。
+  <strong>
+   【01】立什么样的志，成什么样的人
+  </strong>
  </p>
  <p>
-  一日，禅师问这弟子：“一朵花有多大？”
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/王阳明" target="_blank">
+    王阳明
+   </span>
+   说：“第一等事应是读书做圣贤。”
+  </strong>
  </p>
  <p>
-  “有的如指头大，有的如拳头大，有的如巴掌大，顶大的，也不过脸盆大吧。”弟子说。
+  1483年，王阳明在北京的私塾读书。有一天，他一本正经地问老师：“何谓第一等事？”这相当于是在问，人生的终极价值是什么？
  </p>
  <p>
-  “花香有多大呢？”禅师再问。
+  他的老师吃了一惊，因为从来没有学生问过他这样的问题。但他还是很快作出了坚定的回答：“当然是读书做大官啊！”
  </p>
  <p>
-  “花香怎么是多大呢？”弟子不解。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “哦，我是指花香能传播多大的空间？”禅师说。
+  王阳明严肃地看着老师说：“我认为不是这样。”顿了顿，一脸郑重地继续说道：“我以为第一等事应是读书做圣贤。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,7 +81,7 @@
   </div>
  </center>
  <p>
-  “有的可以溢满整个房间，有的可以溢满一个广场，如有风，有的花香可以传到几里地开外。”弟子说。
+  中国有句老话，叫三岁看老。中国的古人，也一向高度强调立志的重要性。王阳明从小立志做圣贤，后来果然成为圣贤，则为此作出了最好的诠释和证明。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,139 +96,115 @@
   </div>
  </center>
  <p>
-  “几里地有多少个脸盆大呢？”禅师说，“如果把花香比作花的
-  <span href="https://www.secretchina.com/news/gb/tag/灵魂" target="_blank">
-   灵魂
+  立志为什么重要？因为志向就是意志，就是方向。只有如此，人在有限的时间精力和复杂的现实之下，才可能意志坚定、少走弯路，而大大提高完成目标的可能性。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   【02】越是艰难处，越是
+   <span href="https://www.secretchina.com/news/gb/tag/修心" target="_blank">
+    修心
+   </span>
+   时
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   王阳明说：“我以落第动心为耻。”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1496年，王阳明在会试中再度名落孙山。有人在发榜现场未见到自己的名字而嚎啕大哭，王阳明却无动于衷。大家以为他是伤心过度，于是都来安慰他。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王阳明脸上略过一丝沧桑的笑，说：“你们都以落第为耻，我却以落第动心为耻。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  人生中会遇到很多的艰难困苦，越是在这种时候越能体现人的心性修养。寻常人往往慌乱悲戚，唯有修养深厚者能做到泰然处之。
+  <span href="https://zh.wikipedia.org/wiki/%E6%96%87%E5%A4%A9%E7%A5%A5">
+   文天祥
   </span>
-  ，那么，一个生命
+  说：时穷节乃现。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如何才能拥有这种自觉和修养呢？王阳明还有一句话，道出了所有：人须在事上磨，方能立得住；方能静亦定，动亦定。艰难困苦，正是对
   <strong>
-   灵魂
-  </strong>
-  的芬芳，永远比它漂亮的形体传播得更长远，影响得更深广。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="一个生命灵魂的芬芳，永远比它漂亮的形体传播得更长远。" src="https://img3.secretchina.com/pic/2020/8-6/p2748432a444399944-ss.jpg"/>
-  <br>
-   一个生命
-   <strong>
-    灵魂
-   </strong>
-   的芬芳，永远比它漂亮的形体传播得更长远。
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【02】一条蛇的禅理
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  寒冬，禅师和弟子见路边有一条冻僵的蛇，禅师要上前去救它，弟子拦阻道：“师父，你忘了农夫与蛇的故事吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “当然没忘。”禅师说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “那你为什么还要去救它呢？”弟子问。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “救它，就一定要跟农夫那样，把蛇放进怀里去救它吗？”禅师说完，便找来些柴火，在冻僵的蛇旁燃起了一堆火，在火的温暖下，蛇慢慢地活了过来。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “施善的手段，永远不是单一的，而是多样的。”禅师说，“面对恶者，我们要做的，不是因为害怕恶报，而放弃施善，而是
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/智慧" target="_blank">
-    智慧
+   <span href="https://www.secretchina.com/news/gb/tag/心性" target="_blank">
+    心性
    </span>
   </strong>
-  地选择施善的手段，让我们的
-  <strong>
-   善良
-  </strong>
-  免遭恶报。”
+  的最好磨砺。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,101 +220,8 @@
  </center>
  <p>
   <strong>
-   【03】一道光的禅理
+   【03】有颗强大的内心，便能无往而不胜
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当禅师谈到“炫耀”这个话题，弟子问，炫耀只不过是显摆自己，并不伤害他人，炫耀又有什么不好呢？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  禅师问，为什么白天我们看不见星星呢？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “因为白天阳光太强，过强的阳光遮盖了微弱的星光，所以白天才看不见星星。”弟子说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  禅师说：“在我们的想像中，光越强，我们看得越清晰、越明了，谁知，过强的光，有时比黑暗更能蒙蔽我们的双眼。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  禅师说到这里，又把话题回到了“炫耀”上。禅师说：“炫耀就是那一道道强光，为显摆自己而遮盖别人的光亮，为显摆自己而蒙蔽别人、欺骗别人，这难道不是对别人的伤害吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="为显摆自己而蒙蔽别人，是对别人的伤害。" src="https://img3.secretchina.com/pic/2020/8-30/p2765492a949342329-ss.jpg"/>
-  <br>
-   为显摆自己而蒙蔽别人，是对别人的伤害。
-  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -370,7 +237,7 @@
  </center>
  <p>
   <strong>
-   【04】一道阴影的禅理
+   王阳明说：“胜负之决，只在此心动与不动。”
   </strong>
  </p>
  <center>
@@ -386,7 +253,88 @@
   </div>
  </center>
  <p>
-  禅师有二个弟子，可一段时间，两弟子不和，彼此产生隔阂，中间老隔着一层阴影。
+  有弟子问王阳明，用兵是不是有特定的技巧？王阳明回答：哪里有什么技巧，只是努力做学问，养的此心不动；如果非要说有技巧，那此心不动就是唯一的技巧。大家的智慧都相差无几，胜负之决只在此心动与不动。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王阳明举例子说，当时和朱宸濠对战时，我们处于劣势，我向身边的人发布准备火攻的命令，那人无动于衷，我说了四次，他才从茫然中回过神来。这种人就是平时学问不到家，一临事，就慌乱失措。那些急中生智的人的智慧可不是天外飞来的，而是平时学问纯笃的功劳。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  为什么“此心不动”是唯一的技巧呢？因为心不动才能冷静，冷静才能沉着，沉着才能在危机面前正常甚至超常发挥，所谓急中生智。如阳明先生所说，这不是天外飞来的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  事事讲技巧，似乎看着聪明，其实都是投机者的小聪明。只有真正的智者，才会从大本大源上找依靠，老老实实做功夫。这就是
+  <span href="https://zh.wikipedia.org/wiki/%E8%80%81%E5%AD%90">
+   老子
+  </span>
+  所说的“大巧若拙”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如何做功夫呢？王阳明在这里指出了另一条路——努力做学问。诸葛亮说“非学无以广才”，对于才能和修养，读书学习就算不是唯一的路，也一定是必不可少的一条路。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   【04】顺应自己的本性，保持自己的良知
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -405,7 +353,7 @@
   </ins>
  </center>
  <p>
-  一日，禅师当着两弟子的面，对着一道阴影，又是用火烧，又是用水泼，又是用土埋，又是找来风扇，对着阴影吹。
+  王阳明说：“这和尚终日口巴巴说什么！终日眼睁睁看什么！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -420,7 +368,7 @@
   </div>
  </center>
  <p>
-  做完这一番后，禅师问两个弟子：阴影被火烧毁了吗、被水淹没了吗、被土掩埋了吗、被风吹走了吗？
+  王阳明在一座寺庙中看到一个枯坐的和尚，据说已不视不言静坐三年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -435,7 +383,7 @@
   </div>
  </center>
  <p>
-  “没有。”两弟子异口同声地回答道。
+  王阳明笑了笑，就绕着和尚走了几圈，像是道士捉鬼前的作法。最后他在和尚面前站定，看准了和尚，冷不防地大喝一声：“这和尚终日口巴巴说什么！终日眼睁睁看什么！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -450,7 +398,7 @@
   </div>
  </center>
  <p>
-  这时，禅师又拿出一只手电筒筒，向着阴影照去，顿时阴影消失全无。
+  不知是王阳明的禅机触动了和尚，还是王阳明的大嗓门惊动了和尚。总之，和尚惊慌地睁开眼，“啊呀”一声。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -465,7 +413,7 @@
   </div>
  </center>
  <p>
-  “人与人之间的阴影也是如此，消除阴影的最好办法，不是施暴，不是打击，也不是报复，而是用内心的光亮与去包容它，去照亮它，这样才能真正消除彼此间的阴影。”禅师说。
+  王阳明盯紧他，问：“家里还有何人？”和尚答：“还有老母。”王阳明再问：“想念她吗？”和尚不语。一片寂静，静的能听到和尚头上的汗水流淌的声音。最后，和尚打破了这一死寂，用一种愧疚的语气回答：“怎能不想念啊！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -480,9 +428,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   【05】一颗心的禅理
-  </strong>
+  王阳明露出满意的神色，向和尚轻轻地摆手说：“去吧，回家去照顾你的母亲吧。”第二天，和尚离开寺庙，重回人间。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -497,7 +443,7 @@
   </div>
  </center>
  <p>
-  禅师弟子众多，但其中一弟子十分贪婪。一日，这位弟子试着问禅师：“心有边界吗？”
+  这个打坐的和尚明明不言不视已经三年，王阳明为什么偏偏问他口巴巴说什么、眼睁睁看什么？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -512,7 +458,7 @@
   </div>
  </center>
  <p>
-  “当然有。”禅师说。
+  因为他看到了和尚表面不说、不看，心里却终日在说、在看。说和看的，正是绝思绝欲与人的天然良知之间的冲突。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -527,7 +473,7 @@
   </div>
  </center>
  <p>
-  “哪您为什么常对我们说，一个人的心可以容纳整个宇宙呢？宇宙不是无边界吗？”弟子问。
+  王阳明其实就跟他说了一句话：顺应自己的本性，顺从自己的良知，才是人，才合道。绝不是要别处再求一个凌驾于人心万物的道。那也不是道，是妄。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -542,56 +488,11 @@
   </div>
  </center>
  <p>
-  “宇宙也是有边界的。宇宙如果无限膨胀，突破了一定的界限，就会自我爆炸，自我毁灭。”禅师说，“一个人的心也是如此，当贪婪、欲望之心无限膨胀，突破了边界和底线，也会自我毁灭的啊！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  弟子听后，惊出了一身冷汗。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  真心诚意想做王阳明
+  <span href="https://www.secretchina.com/news/gb/tag/心学" target="_blank">
+   心学
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  的信徒，好好生活，好好做人，听到自己内心善的声音，听从自己内心的良知召唤，也就够了。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -604,6 +505,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41SO"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -621,13 +556,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945750.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945750.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945750.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/16/945750.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958916.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958916.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958916.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/17/958916.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/945750.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/958916.md' width='0px' height='0px'/>
