--- a/pages/p5/959355.md
+++ b/pages/p5/959355.md
@@ -1,4 +1,4 @@
-### 数百亿债券现交叉违约风险 多个金融机构被查&nbsp;(图)
+### 中国对澳猛烈报复9个月 结果澳洲赚翻了(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="金融 债券 违约 永煤控股" src="https://img3.secretchina.com/pic/2019/12-21/p2586911a114851725-ss.jpg"/>
+  <img alt="澳洲 进口 关税" src="https://img3.secretchina.com/pic/2020/6-24/p2718101a397440584-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   数百亿债券现交叉违约风险，多个金融机构被查。（图片来源：Adobe Stock）
+   澳洲官方数据显示，2020年对华出口创下历史第二高水平。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,60 +29,107 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月20日讯】（看中国记者丁晓雨综合报导）AAA级、国企背景的永城煤电控股集团有限公司（以下简称“
+  【看中国2021年1月17日讯】（看中国记者文龙综合报导）自从
   <strong>
-   永煤控股
+   澳洲
   </strong>
-  ”）突然
+  政府提出国际社会对
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
+  </span>
+  疫情的源头进行调查之后，北京当局就多方面的采取对商品停止
   <strong>
-   违约
+   进口
   </strong>
-  后，引发的市场震动仍在扩大。
+  和高额
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/金融" target="_blank">
-    金融
-   </span>
+   关税
   </strong>
-  、证券行业也因涉嫌协助违规陆续被查，数百亿
-  <strong>
-   债券
-  </strong>
-  现交叉违约风险。
+  等报复措施。不过，澳洲官方数据显示，2020年对华出口创下历史第二高水平。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《
+  中国海关总署1月14日发布的外贸数据显示，尽管澳大利亚对煤炭和龙虾等商品采取了制裁措施，对大麦和葡萄酒征收高额
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%85%B3%E7%A8%8E" target="_blank">
+   关税
+  </span>
+  ，并禁止进口木材，但2020年澳大利亚向中国出口了1480亿澳元(合1148亿美元)的商品。
+ </p>
+ <p>
+  澳大利亚官方数据显示，北京当局对
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%BE%B3%E6%B4%B2" target="_blank">
+   澳洲
+  </span>
+  商品发起为期9个月的猛烈贸易攻击，所造成的损失是60亿澳元，降幅约为4%。2020年澳大利亚对华出口创下历史第二高水平，2019年创下1540亿澳元(合1196亿美元)的最高记录，2020年比排名第三的2018年高出近10%。
+ </p>
+ <p>
+  据《澳大利亚人报》报道，澳大利亚资源部长皮特(Keith Pitt)表示，他对目前澳中两国的僵局感到失望。73艘散货船上的1500名海员被困在
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  基金报》报导，11月19日晚，监管部门对兴业银行、光大银行、中原银行，以及中诚信、希格玛会计师事务所发出调查令，银行间市场交易商协会也对兴业银行、光大银行、中原银行等启动自律调查。
+  海岸，船上载有价值逾10亿澳元的澳大利亚煤炭无法清关。
  </p>
  <p>
-  报导称，11月19日傍晚，交易商协会在对
-  <span href="https://zh.wikipedia.org/wiki/永煤集团" target="_blank">
-   永煤控股
+  他说，“这些煤炭由中国买家所有，在卸货方面由中国当局管理，但澳大利亚行业出口仍然强劲。煤炭企业以前就经历过这些挑战，现在正在制定自己的应急计划。”
+ </p>
+ <p>
+  中国贸易行动造成的损害，在很大程度上受到铁矿石价格上涨的抵消影响。在销往中国钢铁行业的铁矿石中，澳大利亚占60%以上(价值约850亿澳元)，主要来自必和必拓、力拓和Fortescue公司。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  铁矿石出口是澳大利亚经济的支柱之一。2019-2020财年（以7月起止），澳大利亚铁矿石出口收入1020亿美元，并且提供6.5万个工作岗位。其中，中国
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%80%B2%E5%8F%A3" target="_blank">
+   进口
   </span>
-  开展自律调查和对多家中介机构进行约谈过程中，发现兴业银行股份有限公司、中国光大银行股份有限公司和中原银行股份有限公司等主承销商，以及中诚信国际信用评级有限责任公司、希格玛会计师事务所（特殊普通合伙）存在涉嫌违反银行间债券市场自律管理规则的行为。
+  额度达到849亿美元。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  而11月18日，银行间市场交易商协会发布通告称，近日，交易商协会对永煤控股开展了自律调查。根据调查获取的线索并结合相关市场交易信息，发现海通证券及其相关子公司涉嫌为发行人违规发行债券提供帮助，以及涉嫌操纵市场等违规行为，涉及银行间债券市场非
-  <span href="https://zh.wikipedia.org/wiki/金融" target="_blank">
-   金融
+  澳大利亚也是全球第一大铁矿石出口国，2019-2020财年该国出口份额占到全球60%，巴西以21%名列第二，其后是南非的4%，加拿大的3%，以及印度的2%。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国每年从海外
+  <span href="https://www.secretchina.com/news/gb/tag/进口" target="_blank">
+   进口
   </span>
-  企业债务融资工具和交易所市场公司债券。
- </p>
- <p>
-  随后，海通证券公告回应称，公司将积极配合自律调查的相关工作。受此消息影响，海通证券11月19日股价逆势大跌6%。
- </p>
- <p>
-  据《中国证券报》报导，海通证券是上个月永煤控股刚发行的10亿元中期票据“20永煤MTN006”的承销团成员，最新被调查的兴业银行、光大银行和中原银行等则是永煤控股发行的多只
-  <span href="https://zh.wikipedia.org/wiki/债券" target="_blank">
-   债券
-  </span>
-  的主承销商。
+  10多亿吨铁矿石，铁矿石价格每吨波动1元人民币，就是10亿多元人民币的变动。而近几个月铁矿石价格上涨，按年计算，影响中国钢铁企业千亿元计的利润。中国大型钢铁企业上个月一致呼吁中国官方采取有效措施，及时介入。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,11 +144,7 @@
   </div>
  </center>
  <p>
-  中诚信国际为永煤控股发行
-  <span href="https://www.secretchina.com/news/gb/tag/债券" target="_blank">
-   债券
-  </span>
-  提供信用评级服务。在永煤控股爆雷前一个月（10月10日），中诚信国际为永煤控股发行“20永煤MTN006”出具的信用评级还是主体/债项双AAA级。一个月后，永煤控股发生债券违约，令外部评级的有效性再次遭到质疑。
+  中国海关总署1月14日公布的数据显示，2020年中国进口了11.7亿吨铁矿石。这超过了2019年的10.69亿吨和2017年创下的10.75亿吨的前纪录。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,11 +159,7 @@
   </div>
  </center>
  <p>
-  永煤控股
-  <span href="https://www.secretchina.com/news/gb/tag/违约" target="_blank">
-   违约
-  </span>
-  还或将触发控股股东河南能化旗下115亿元债券的交叉保护条款。涉及永煤控股和河南能化的相关存续债券一共将近350亿元。
+  另外，液化天然气是澳大利亚对中国的第二大出口，每年价值约160亿澳元，在2020年期间，液化天然气的销售也没有受到影响。澳大利亚是中国最大的天然气供应国，在澳交所(ASX)上市的供应商包括Woodside Energy、Santos和Origin，它们的供应占中国这种战略资源进口的40%以上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,52 +174,7 @@
   </div>
  </center>
  <p>
-  据中金公司统计，永煤、豫能化存续债券体量接近500亿元，而且母子公司全部公募债券合计265亿元均设置了交叉保护条款。其中，永煤共15支150亿元，豫能化共10支债券115亿元。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中金公司称：“如果确认交叉违约，可能导致企业短期集中兑付压力进一步加大。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据报导，11月19日河南能化及主承销商召集“20永煤SCP003”的持有人召开预沟通会，讨论“20永煤SCP003”的展期问题，但部分债权人并不同意展期方案。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报导称，发行人及主承销商提出了“20永煤SCP003”展期270天，利率不变，到期一次性还本付息的方案，遭到部分债券持有人反对。
+  UTS（悉尼科技大学）经济学家、澳中关系研究所负责人劳伦斯(James Laurenceson)表示，年度出口数据表明，中国迄今无法对澳大利亚经济造成全面伤害。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,11 +193,7 @@
   </ins>
  </center>
  <p>
-  据了解，“20永煤SCP003”违约后，河南能化有10个工作日宽限期，在宽限期内足额偿付债务，可不构成违约，需在足额偿付次日公告。宽限日满后仍未偿付，则需召开债券持有人大会商讨无条件豁免或有条件豁免。持有人不豁免交叉违约或者参会人员不够人数，则相关债务融资工具本息应在持有人会议表决截止日的次一日立即到期应付。留给
-  <span href="https://www.secretchina.com/news/gb/tag/永煤控股" target="_blank">
-   永煤控股
-  </span>
-  及河南能化的时间已经不多。
+  他说，“当然，在做出这一评估的同时，我们也对特定行业面临的重大损失提出了警告。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -218,7 +208,11 @@
   </div>
  </center>
  <p>
-  另外，债务违约事件仍然在不断爆出。
+  例如，去年11月下旬，当中国对澳大利亚葡萄酒征收212%的
+  <span href="https://www.secretchina.com/news/gb/tag/关税" target="_blank">
+   关税
+  </span>
+  时，规模为13亿澳元的葡萄酒出口行业在一夜之间停摆，而6亿澳元的龙虾贸易也同样遭殃。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +227,7 @@
   </div>
  </center>
  <p>
-  11月19日，福建福晟集团公告称，公司应于当日支付“18福晟02”的本金及利息共计6.31亿元，截至本公告出具之日，公司尚未支付。
+  劳伦斯表示，“不过，如果其目的是让这些特定行业成为北京方面的政治游说者，证据也表明，这一策略已经惨遭失败。当然，在澳大利亚民众心中，它是失败的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -248,7 +242,7 @@
   </div>
  </center>
  <p>
-  这是房地产领域发生的又一起债券违约案例。这使得债券市场上利率债与信用债进一步走低。
+  对澳大利亚煤炭的禁令已迫使中国用户支付近40%的溢价以确保供应，在12月底异常寒冷的冬天，煤炭短缺导致电力中断。它还使中国钢铁企业的焦煤成本飙升。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -262,27 +256,12 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+ <p>
+  1月16日，法广等多家媒体报道称，中国虽然禁止
+  <span href="https://www.secretchina.com/news/gb/tag/澳洲" target="_blank">
+   澳洲
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  煤炭进口，不过中国还是透过其它国家进口澳洲煤炭。煤炭业者透露，中国现在向俄罗斯、印尼、南非、印度，以及巴基斯坦等国家进口煤炭来补缺口。事实上，这些国家大部分都是向澳洲进口煤炭，再度转卖给中国，可以说中国根本是间接进口了澳洲煤炭，证明这项抵制成效有限。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -295,6 +274,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41ZT"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -312,13 +329,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953232.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953232.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953232.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/20/953232.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959355.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959355.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959355.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/17/959355.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/953232.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/959355.md' width='0px' height='0px'/>
