同步于: 1月20日2时2分

--- a/pages/prog204/a103035592.md
+++ b/pages/prog204/a103035592.md
@@ -1,4 +1,4 @@
-### 【环球直击】12月21日完整版（2）
+### 【中国禁闻】1月19日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,23 +7,19 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年12月22日讯】九千亿
-  <ok href="https://www.ntdtv.com/gb/疫情纾困案.htm">
-   疫情纾困案
+  【新唐人北京时间2021年01月20日讯】
+  <ok href="https://www.ntdtv.com/gb/黑龙江疫情.htm">
+   黑龙江疫情
   </ok>
-  麦康奈尔：达成协议；
-  <ok href="https://www.ntdtv.com/gb/蓬佩奥.htm">
-   蓬佩奥
+  扩大 望奎县发闭门令；专家小组:中共与
+  <ok href="https://www.ntdtv.com/gb/世卫.htm">
+   世卫
   </ok>
-  ：美媒因利益受制于中共 帮中共说话；富商直击白宫会议 曝光
-  <ok href="https://www.ntdtv.com/gb/大选舞弊.htm">
-   大选舞弊
+  延误 至病毒蔓延；涉
+  <ok href="https://www.ntdtv.com/gb/人权犯罪.htm">
+   人权犯罪
   </ok>
-  内幕；
-  <ok href="https://www.ntdtv.com/gb/大阪挺川.htm">
-   大阪挺川
-  </ok>
-  反窃选游行 传达正义力量。
+  中共副总理韩正被举报。
  </p>
  <div class="single_ad">
  </div>
@@ -31,13 +27,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103015179.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103015179.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103015179.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/12/21/a103015179.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog204/a103035592.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog204/a103035592.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog204/a103035592.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2021/01/19/a103035592.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103015179.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog204/a103035592.md' width='0px' height='0px'/>
