--- a/pages/p5/959987.md
+++ b/pages/p5/959987.md
@@ -1,4 +1,4 @@
-### 川普拟出重拳组同盟抵制中国经贸霸凌(图)
+### 拜登上台 中国三大电信商要求取消退市决定(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/11-26/p2825941a717781895-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="拜登 纽约证券交易所 电信 退市" src="https://img3.secretchina.com/pic/2020/11-29/p2827982a565588413-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   川普拟出重拳组同盟抵制中国经贸霸凌。（图片来源：自由亚洲电台）
+   三家中国国有电信公司被美国纽约证券交易所摘牌退市。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,140 +29,69 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月26日讯】近年来中国致力于在国际舞台上扮演更加活跃和带主导性的角色，但众多举措却被其它国家批评为“不遵守游戏规则”。有媒体报导，美国
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  政府希望在离任前建立一个非正式联盟，联合西方国家反制中国利用
+  【看中国2021年1月22日讯】（看中国记者文龙综合报导）三家被美国
   <strong>
-   经贸
+   纽约证券交易所
   </strong>
-  实力威吓它国的行为。
+  摘牌
+  <strong>
+   退市
+  </strong>
+  的中国国有
+  <strong>
+   电信
+  </strong>
+  公司，在
+  <strong>
+   乔·
+   <span href="https://www.secretchina.com/news/gb/tag/拜登" target="_blank">
+    拜登
+   </span>
+  </strong>
+  （Joe Biden）宣誓就职美国总统之后，趁机提出取消退市决定的要求。此前，已经有多家有中国军方背景的中国公司遭到制裁。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  “不管他们长五只眼还是十只眼，只要胆敢损害中国主权、安全、发展利益，小心他们的眼睛被戳瞎。”中国外交部发言人
-  <span href="https://www.secretchina.com/news/gb/tag/赵立坚" target="_blank">
-   赵立坚
+  据《华尔街日报》报道，中国移动、中国联通和中国
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%94%B5%E4%BF%A1" target="_blank">
+   电信
   </span>
-  如此回应“五眼联盟”就香港问题发表的声明。
- </p>
- <p>
-  G20峰会刚刚落幕，中国国务院总理李克强随后与六大国际经济机构领袖举行第五次“1+6”圆桌对话会，包括世界银行、国际货币基金组织、世界贸易组织、国际劳工组织、经济合作与发展组织和金融稳定理事会。
- </p>
- <p>
-  <strong>
-   中国的国际化寻求合作还是试图称霸
-  </strong>
- </p>
- <p>
-  毫无疑问，中国现在的国际角色和半个世纪前不可同日而语。近年来，中国积极参与国际事务，主导国际组织运作的企图心外界有目共睹，但西方国家也逐渐提出质疑，中国是不是个负责任的领导者？中国是不是试图扩大自身影响力，输出威权政治来消灭民主？
- </p>
- <p>
-  “我认为在过去的一年中，中国是否为一个负责任的全球角色，这个问题变得越来越重要。发达国家对中国的负面看法越来越多，而发展中经济体则担心对中国的经济依赖日益增加。”美国智库传统基金会（Heritage Foundation)经济与科技政策分析师莱利．华特斯（Riley Walters）告诉本台。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  身为世界第二大经济体，中国也擅长利用自身优势对别国施加影响。多年来中国的贸易伙伴屡有怨言，不满中国在说服其他国家向中国商品开放市场的同时，却保护了其国内市场免受外国企业的竞争。此外，中国也擅长用贸易制裁，来对付其它国家批评的声音。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   白宫欲求合作联合抵抗中国贸易制裁
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国媒体《华尔街日报》披露，川普政府有意组成非正式联盟，联合西方国家针对中国利用贸易实力胁迫其它国家时，联合对中国采取反制措施。政府官员向《华尔街日报》透露，该计划催生的原因起于澳大利亚呼吁调查
-  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
-   新冠病毒
+  三大中国国企电信公司1月20日在香港分别提交文件，要求纽约证券交易所（纽交所）重新审议将其美国存托凭证停止交易和除名下市的决定。“这些要求是在美国新总统乔·
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%94%C2%B7%E6%8B%9C%E7%99%BB" target="_blank">
+   拜登
   </span>
-  (又称中共病毒，COVID-19)起源后，中国一连串的经贸报复举措。
+  宣誓就职几小时后提出的。”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  “对美国来说，继续在世界范围内建立伙伴关系将是一件好事，这不仅包括此类对话，还包括扩大贸易和投资伙伴关系。对于美国来说，继续揭露中国的一些最恶劣行为也很重要，无论是像对澳大利亚那样的强制性行为，还是其它情况。”华特斯说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  今年四月，澳大利亚呼吁国际支持就新冠病毒的起源及扩散途径展开独立调查，引发中国不满，随后中国禁止一连串的澳大利亚商品进口，包含葡萄酒、大麦、棉花，不久前更传出龙虾出口遭遇中国海关耽搁延误，导致高价龙虾死亡的消息。11月中，中国外交部更是洋洋洒洒列出14项澳大利亚的反中行为。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  前美国国防部长办公室中国科科长包士可（Joe Bosco)认为，美国应联合其志同道合国家，共同抵抗中国强大的
-  <span href="https://www.secretchina.com/news/gb/tag/经贸" target="_blank">
-   经贸
+  拜登上任首日签署了15项行政命令，推翻了前总统
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
   </span>
-  压力。
+  (特朗普)的一些关键政策，但其中暂不包括与这三大中国国有电信公司有关的一项行政命令。
+ </p>
+ <p>
+  这三家公司是中国
+  <span href="https://www.secretchina.com/news/gb/tag/电信" target="_blank">
+   电信
+  </span>
+  (CHA, China Telecom Corporation Limited)， 中国移动有限公司(CHL, China Mobile Limited)，和中国联通(香港)( CHU , China Unicom HK Limited)。它们都是公开的中国国有企业或者国有企业全面控制的子公司。
+ </p>
+ <p>
+  1月21日，这三家电信公司说，它们按照法律、法规运营，遵守上市规则和监管要求。根据
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%BA%BD%E7%BA%A6%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80" target="_blank">
+   纽约证券交易所
+  </span>
+  上市规定，他们提出的重新审核要求必须要在25个工作日内完成。
+ </p>
+ <p>
+  在本月初的一个星期内，纽交所先宣布这三家
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  电信公司被除名，接着又宣布改变决定，随后在1月6日，最终决定将其除名，过程一波三折。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +106,7 @@
   </div>
  </center>
  <p>
-  “据我了解建立联盟这个巧妙的概念是，每当北京因为一个国家批评中共迫害维吾尔人或香港，而对其施加经济惩罚时，其他国家将共同分担这个经济负担。”包士可告诉本台。
+  去年11月，第45任美国总统川普签署了一项行政命令，禁止美国人投资被认为有中国军方背景，即为中国军事、情报和安全服务供货或提供支持的中国公司。该行政命令规定从今年1月11日开始禁止美国投资者购买列入黑名单的证券，并允许他们在11月11日之前放弃持有的股票。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +121,7 @@
   </div>
  </center>
  <p>
-  他认为，这个“多对一，一对多”（all-for-one,one-for-all）的合作方式，将能鼓励更多国挺身而出谴责中国侵犯人权的行为，不需担心自身经济受到重大冲击。
+  该黑名单现在包括44家在能源，航空，运输和技术等领域的中国公司。美国财政部曾表示，将把与这些公司相关的子公司添加到清单中。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +136,67 @@
   </div>
  </center>
  <p>
-  <strong>
-   国际组织：中国威权主义输出的平台
-  </strong>
+  1月15日，美国国防部又将中国的小米公司加入到支持中国军方公司的黑名单里。根据川普发布的行政命令，这意味着60天后美国投资者将无法购买小米股票，他们有一年的时间出售现有股票。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1月22日，据《美国之音》报道，哈佛大学法学院教授杰西·弗里德（Jesse Fried）认为，纽交所不大可能撤销对中国三大电信公司摘牌的这项决定，“纽交所显然是在接获联邦政府指令后准备取消这些公司的上市资格。除非这些指令被撤销，否则纽交所不可能逆转自己做出的决定。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  弗里德教授认为，拜登政府不太可能很快撤销这些指令和川普的这项行政命令，“因为这不是优先事项，鉴于政治利益，需要谨慎考虑。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  纽约天骄资产管理公司总裁郭亚夫说，“纽交所应暂时不会做出答复，拜登政府也不会很快废除这项命令，毕竟现在的对华政策得到美国两党支持。不过既然提出，也许是有希望吧，这取决于未来美中关系的发展，如果不那么紧张也不是没有可能。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  郭亚夫说，投资人最不喜欢不确定性，“因为要被摘牌这些股票在香港跌得很惨”，“以后即使逆转了，很多投资人也不一定会再投这些公司了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +215,11 @@
   </ins>
  </center>
  <p>
-  另一方面，中国牵头共十五个亚太地区国家签署《区域全面经济伙伴协定》（RCEP），将成世界最大自贸区。曾在台湾国防安全研究院任职的美国杜兰大学政治系博士生普麟表示，中国已抛弃过去韬光养晦，改走向积极影响国际舆论、试图输出威权主义的道路。
+  未来或有更多在美上市的中国公司被摘牌
+  <span href="https://www.secretchina.com/news/gb/tag/退市" target="_blank">
+   退市
+  </span>
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +234,7 @@
   </div>
  </center>
  <p>
-  “中国反而是利用在国际组织的势力，以及在国际上其他的盟友，试图去改变所谓的国际规范，或者是我们对于价值的定义，特别是在人权方面这是非常明显的。”他告诉本台记者。
+  去年12月18日，川普在参众两院一致通过《外国公司问责法案》后将其签署为法律，规定在美上市的中概股连续3年未通过美国监管机构审计将被禁止在美上市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +249,7 @@
   </div>
  </center>
  <p>
-  去年联合国一场会议上，白俄罗斯代表五十四个国家发表了一份共同声明，赞扬中国在新疆地区采取的“反恐”措施，并称中国保障新疆人民的基本人权。普麟指出，这个例子显示了中国企图透过国际组织合理化自身的威权主义。
+  中概股（中国概念股）是指一系列以在中国大陆的资产或营收为其主体组成部分公司的股票。一般来说，中国概念股公司是以在海外上市的方式来获取境外投资的一种方式之一。目前境外上市的主要目的地包括香港证券交易所、纽约证交所、纳斯达克和美国证券交易所等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +264,7 @@
   </div>
  </center>
  <p>
-  “中国利用国际组织平台，去试图改变国际规范，试图定义传统的西方价值。”他说。
+  美国上市公司会计监督理事会（PCAOB）长期以来一直抱怨中方没有履行备忘录指责，批准美方的信息请求，因为其对在美国交易所交易的中国公司的审计缺乏了解。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,8 +279,24 @@
   </div>
  </center>
  <p>
-  如果西方国家不马上采取有效措施改变这一现状的话，国际局势的主导者可能就要换人了。华盛顿智库“国防重点”（Defense Priorities）研究员理查德．哈尼亚（Richard Hanania）11月23日投书美国全国广播公司（NBC），指出美国已淡出国际事务上的主导地位，因为中国崛起的地缘政治和经济现实正逼使美国角色转变，而中国将会支配美国未来的外交政策。文章分析，中国影响力与日俱增，东亚的未来会更多地取决于北京，而非华盛顿。
+  事实上，通常在美国公开募集资金的公司必须经过SEC认证的会计公司的审计，这些审计工作还将受到PCAOB的监督。长久以来，北京当局以国家安全为由，禁止审计师的审计纪录被转移出国，因而造成中国企业虽然在美国上市，却不完全遵守美国证券法。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <div id="gtx-trans" style="position: absolute; left: 725px; top: 371.8px;">
+  <div class="gtx-trans-icon">
+  </div>
+ </div>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -303,20 +310,21 @@
   </div>
  </center>
  <p>
-  版权所有©2006,RFA。经Radio Free Asia,2025 MSt.NW,Suite 300,Washington DC 20036许可进行再版。http://www.rfa.org。
+  责任编辑:辛荷
+来源:
+  <span href="/news/gb/tag/看中国  ">
+   看中国
+  </span>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41jf"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -338,42 +346,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953778.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953778.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953778.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/953778.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959987.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959987.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/959987.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/22/959987.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/953778.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/959987.md' width='0px' height='0px'/>
