--- a/pages/p4/960077.md
+++ b/pages/p4/960077.md
@@ -1,4 +1,4 @@
-### 审马加爵案的法官被控谋杀 传杀害情人(组图)
+### 《自由圣火》复刊辞(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-21/p2801081a716980967-ss.jpg"/>
+  <img alt="中国 自由圣火 中共" src="https://img3.secretchina.com/pic/2021/1-23/p2863902a424654512-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   昆明市中院刑事审判庭第一庭副庭长刀文兵涉故意杀人罪被公诉。（图片来源：网络）
+   黎明天空（图片来源：Pixabay）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,99 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月21日讯】（看中国记者苗薇综合报导）曾参与审理两宗重大案件，包括1998年孙小果案，并在2004年马加爵案担任主审法官的
+  二零零五年八月，《
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/刀文兵" target="_blank">
-    刀文兵
+   自由圣火
+  </strong>
+  》网站发刊；数年间人文荟萃，群贤毕至，成为
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
+    中国
    </span>
   </strong>
-  自己因故意
+  自由写作者倾情表述理念的重要平台。后因遭受DDOS攻击，被迫于二零一一年四月停刊。依据常识判断，DDOS攻击必是来自
   <strong>
-   杀人罪
+   中共
   </strong>
-  被起诉。网友爆料称，刀文兵与原内蒙古公安厅厅长几乎一样，杀的是
-  <strong>
-   情妇
-  </strong>
-  ，伪造成自杀。
+  暴政网军。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据陆媒《红星新闻》报导，云南省高院近日公布，昆明市中院刑事审判庭第一庭副庭长刀文兵涉故意杀人、掩饰、隐瞒犯罪所得、非法持有弹药罪，将在玉溪市中院接受审讯。但官方没有提及刀文兵涉嫌所杀何人，引起网络猜测。
- </p>
- <p>
-  一名自称“胡贵云律师”的网友10月21日在微博上爆料，审判马加爵杀人案的法官刀文兵，后来也亲自杀人了，案情与原内蒙古公安厅厅长几乎一样，杀的是情妇，伪造成自杀。
- </p>
- <p>
-  针对网友爆料刀文兵涉嫌杀害情妇，昆明中院回应称：刀文兵被带走时是在任期内，不太了解相关案情，该案仍在审判过程中。
- </p>
- <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-21/p2801082a425808795-ss.jpg"/>
-  <br>
-   （图片来源：微博截图）
-  </br>
- </p>
- <p>
-  公开资料显示，刀文兵，1969年7月出生，从西南政法大学法学系毕业一直于昆明市司法系统工作，2000年10月获任市中院审判长；先后历任市中院审判监督庭副庭长、执行局副局长等。2019年，其因涉黑、职务犯罪等受查。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  今年6月30日，昆明市人大常委会表决通过了一批人事任免事项，免去了刀文兵的昆明市中级法院审判员职务。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  刀文兵曾参与审理孙小果强奸、故意伤害、强制猥亵妇女案，并在马加爵案中任市中院刑事审判庭第一庭副庭长。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <span href="https://zh.wikipedia.org/wiki/%E9%A9%AC%E5%8A%A0%E7%88%B5%E4%BA%8B%E4%BB%B6" target="_blank">
-   马加爵
+  当前，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
   </span>
-  案发于2004年2月，马加爵杀害四名同班同学一案震惊全国。当时23岁的云南大学4年级学生马加爵，因屡遭室友欺凌，晚上在宿舍逐一用铁锤猛击4名同窗头颅，致他们当场死亡。审理结束后，他在同年被执行死刑。
+  迫使中国社会全面回归毛泽东原教旨主义，中国国运因此进入万年文明史最黑暗的时期；中共暴政的共产极权主义全球扩张正在将人类命运推向地狱之门。
+ </p>
+ <p>
+  值此暴政猖獗、自由艰难的时刻，《
+  <span href="https://www.secretchina.com/news/gb/tag/自由圣火" target="_blank">
+   自由圣火
+  </span>
+  》决意复刊，以承担两项使命。
+ </p>
+ <p>
+  第一项使命：
+ </p>
+ <p>
+  重建心灵家园、精神故乡、文化祖国，以改变当代中国人的共产党文化亡国奴的命运；
+ </p>
+ <p>
+  重新点燃心灵的金灯，以拯救正在物性贪欲中腐烂的人类自由事业；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +85,86 @@
   </div>
  </center>
  <p>
-  孙小果则是在1994年因参与一宗轮奸犯罪被判处有期徒刑3年，但其后获协助违法办理保外就医，得以成功避免入狱服刑。孙小果于1997因强奸多名女性，其中包括未成年人，被法院数罪并罚，终审判处死刑。然而，孙小果入狱后却通过发明多项专利了获得多次减刑，出狱后更摇身一变成为夜总会老板。
+  在信息时代的背景上，重现“百花齐放，百家争鸣”的历史盛典时代，将《自由圣火》网站建成精神多元、思想自由奔放的平台，以期智者、诗者风云际会，共襄中国自由文化运动大义之举。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  第二项使命：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  为以自由之名拯救中国国运；为改变当代中国人的政治奴隶命运，《自由圣火》网站将鼓动风潮，呼唤革命，擎起当代中国民主大革命的思想战旗；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当代中国民主革命党人已经在中缅边境原始森林中成功创建武装反抗
+  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+   中共
+  </span>
+  暴政的政治基地，《自由圣火》网站将为实践人民在暴政前的起义权的民主革命党人提供信息发布平台。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国人已经过分长久地容忍了中共暴政。如果继续容忍，中国国运势必万劫不复。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  高贵的命运是由高贵的人格创造；不能重建心灵家园、精神故乡、文化祖国，中国就不能再现高贵人格。中共暴政是当代中国一切罪恶和苦难的根源；唯有效法前苏联人民，借诸全民反抗和人民起义摧毁中共暴政，才能够成为骄傲的自由人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,7 +183,7 @@
   </ins>
  </center>
  <p>
-  2019年初孙小果于再次因黑社会活动被捕，引起舆论强烈关注，官方不得不重新调查案件。同年12月23日，云南省高级法院于公开宣判，维持昆明中院1998年一审判决中对孙小果的定罪量刑，与孙小果新犯罪行所判刑罚合并，决定执行死刑。自1994年到2019年的25年间，因孙小果案已导致云南政法系统20多名官员落马。
+  让中国人再次获得高贵而壮丽的民族人格；使中国人由暴政的政治奴隶升华为骄傲的自由人——这是《自由圣火》竭尽所能、矢志不渝的追求。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,6 +198,7 @@
   </div>
  </center>
  <p>
+  《自由圣火》编辑部
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,6 +213,7 @@
   </div>
  </center>
  <p>
+  袁红冰 执笔
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,6 +228,7 @@
   </div>
  </center>
  <p>
+  二零二一年一月二十三日
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,6 +242,49 @@
    </center>
   </div>
  </center>
+ <p>
+  https://fireofliberty.info/culture/1247/
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ (文章仅代表作者个人立场和观点)
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  来源:
+  <span href="/news/gb/tag/看中国来稿  ">
+   看中国来稿
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41l7"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -224,42 +306,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/949920.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/949920.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/949920.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/21/949920.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960077.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960077.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960077.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/23/960077.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/949920.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/960077.md' width='0px' height='0px'/>
