--- a/pages/p5/960135.md
+++ b/pages/p5/960135.md
@@ -1,4 +1,4 @@
-### 中国器官贩卖黑市内幕曝光 网热议更大黑幕(图)
+### 中国央行对支付宝们再发新规 涉及1.77万亿(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="中国器官移植内幕（图片来源：PIERRE-PHILIPPE MARCOU/AFP/Getty Images）" src="https://img2.secretchina.com/pic/2019/9-28/p2527412a978291137-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="中国央行 支付宝 备付金" src="https://img3.secretchina.com/pic/2020/9-24/p2782184a306136464-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   中国器官移植内幕（图片来源：PIERRE-PHILIPPE MARCOU/AFP/Getty Images）
+   继支付监管条例发布后，官方对支付市场的进一步约束。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,89 +29,52 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月26日讯】（看中国记者文俪综合报导）近日，社交网络推特上热传一段揭露中国
+  【看中国2021年1月24日讯】（看中国记者文龙综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/人体器官" target="_blank">
-    人体器官
+   <span href="https://www.secretchina.com/news/gb/tag/中国央行" target="_blank">
+    中国央行
    </span>
   </strong>
-  买卖
+  再发文件，对
   <strong>
-   黑市
+   支付宝
   </strong>
-  内幕的影片。其中提到2万元收购的肾脏，卖出则是20多万元（人民币）甚至30至50万元不等，再度引起网络上的热议。
+  等非银行支付机构的客户
+  <strong>
+   备付金
+  </strong>
+  存管办法提出新规定。这是继支付监管条例发布后，官方对支付市场的进一步约束。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   器官贩卖
-   <span href="https://www.secretchina.com/news/gb/tag/黑市" target="_blank">
-    黑市
-   </span>
-   内幕曝光 网友热议
-  </strong>
- </p>
- <p>
-  11月25日，有网友在海外社交平台推特上传一段揭露
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  据中国官媒1月23日报导，
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C" target="_blank">
+   中国央行
   </span>
-  人体器官买卖黑市内幕的影片。
+  发布《非银行支付机构客户备付金存管办法》（下称“《办法》”）。
  </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   医德没了，医院没规则了，法律成了废纸。就成这样了。
-   <span href="https://t.co/I8cSIOXjpE">
-    pic.twitter.com/I8cSIOXjpE
-   </span>
-  </p>
-  — 吴文行wenxingwu (@wuwenhang)
-  <span href="https://twitter.com/wuwenhang/status/1331588905334943747?ref_src=twsrc%5Etfw">
-   November 25, 2020
+ <p>
+  所谓客户备付金，是指非银行支付机构，例如，
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%94%AF%E4%BB%98%E5%AE%9D" target="_blank">
+   支付宝
   </span>
- </blockquote>
- <p>
-  这是一段截取自中国广东经济科教频道的一段视频，视频中说道，每个贩肾团伙给卖肾者的费用不是一致的。例如：山西临汾被强迫卖肾的小伙子胡杰透露，器官贩子曾承诺以4万元（人民币）购取他的一颗肾脏，但在肾脏被摘取后的第三天，他的银行卡中只收到2万7千元（人民币）。
+  和微信支付等，为办理客户委托的支付业务而实际收到的预收待付货币资金，不属于支付机构的自有财产。
  </p>
  <p>
-  一位在杭州卖肾窝点的卧底透露：杭州的卖肾链条甚至还制定了全国统一价。卖肾者卖掉一颗肾的价格大约是3.5万元（人民币）左右。而相对于卖肾者通过卖肾获得的收入，买家要付出高近十倍的代价。例如上述提到的贩肾团伙以2万元的价格收购的肾脏，转到买肾者手里则每次要付二十几万元。此外，卧底还透露说，贩肾团伙向购肾者收取的费用甚至达三十至五十万元不等。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而这则相关的贴文，也引发许多网友的热议，有网友说“触目惊心人体器官当做商品被交易一个自上而下的利益链条”；也有的网友回复，“那个‘当局’就是幕后黑手”；甚至有网友贴出一段调查报告纪录片《铁证如山》，并且表示这个纪录片是“人体器官产业里更不能公开的部份揭露出一小角”而已。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而此则贴文底下的网友回复，除了让人惊觉中国
-  <span href="https://www.secretchina.com/news/gb/tag/器官移植" target="_blank">
-   器官移植
+  之所以要进行
+  <span href="https://www.secretchina.com/news/gb/tag/备付金" target="_blank">
+   备付金
   </span>
-  早已产业化之外，更让人想起长期被国际社会质疑的中共有系统地大量活摘器官贩卖牟利的行径。
+  集中存管，是因为此前各家支付机构将客户备付金以自身名义在多家银行开立账户存放，客户备付金的规模巨大、存放分散，存在一系列金融风险，例如，曾经有客户备付金被部分支付机构挪用，一些支付机构违规占用客户备付金用于购买理财产品或其它高风险投资等。
+ </p>
+ <p>
+  中国央行之前已下令，非银行支付机构客户备付金集中交存在央行开立的账户中。数据显示，截至2020年12月末，非金融机构存款（支付机构交存央行的客户备付金存款）近1.77万亿元（人民币，下同）。
+ </p>
+ <p>
+  中国央行有关负责人表示，《办法》规范了备付金集中交存后的客户备付金集中存管业务，进一步细化了备付金存放、使用、划转规定。“我们考虑到，支付机构自有资金提取是备付金监管的重点之一，为防范挪用备付金风险，应由备付金监督机构对支付机构自有资金提取进行真实性和合理性的审核和判断，保证备付金安全。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +89,7 @@
   </div>
  </center>
  <p>
-  来自新疆的英国维吾尔协会负责人、肿瘤外科医师安华托帝‧博格达就曾表示，中国器官移植已产业化；来源不明的器官，暗藏巨大利润。
+  并且，《办法》严格限制支付机构间备付金划转和自有资金提取流程：要求支付机构提取划转至备付金集中存管账户的手续费收入、因办理合规业务转入的自有资金等资金的，应当向备付金主监督机构提交表明相关资金真实性、合理性的材料，经备付金主监督机构审查通过后划转至备案自有资金账户。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,9 +104,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   中共器官移植来源不明 最大宗来源指向良心犯
-  </strong>
+  这意味着支付机构自有资金，也不是想用就可以随便使用的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +119,11 @@
   </div>
  </center>
  <p>
-  而安华托帝医师所称的来源不明的器官，又是意味着什么？器官贩卖黑市或许只是冰山一角。
+  1月20日，蚂蚁集团实际控制人马云时隔近三个月首次公开露面。同天，中国央行发布针对
+  <span href="https://www.secretchina.com/news/gb/tag/支付宝" target="_blank">
+   支付宝
+  </span>
+  等机构的支付监管条例，并且首次提及反垄断一词，意味着支付市场将开始洗牌。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +138,7 @@
   </div>
  </center>
  <p>
-  虽然中共当局曾于2019年10月份宣称中国器官移植及捐赠数量位居世界第2位，技术也居世界前列。但根据关注中国人权问题的《寒冬》杂志曾于2019年8月从研究中共强摘人体器官暴行的专家李挥戈博士处证实，中国器官移植手术的器官来源非常可疑。
+  中国央行官网公布《非银行支付机构条例（征求意见稿）》（以下简称 《条例》）。《条例》共六章，七十五条，强化公司治理要求，实施全方位、全流程监管；首次提及支付领域反垄断监管措施，明确界定相关市场范围以及市场支配地位认定标准；对持牌机构为无证经营支付业务的机构提供支付业务渠道行为的处罚等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +153,7 @@
   </div>
  </center>
  <p>
-  李挥戈博士表示，在2017年美国肾脏移植平均等待时间为3.6年，但在中国仅需十几天就可以找到适合患者的器官供体，实在令人震惊。而按照“中国人体器官捐献管理中心”官方网站提供的数据，截止到2019年10月前，志愿登记人数为1533717人，这一数字与美国2018年登记在册的18岁以上的器官自愿捐献者1.45亿人相差很多。因此可见中国自愿捐献器官的人数远低于美国。
+  官方对支付机构确定资本要求：非银行支付机构注册资本最低限额为1亿元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,7 +168,7 @@
   </div>
  </center>
  <p>
-  安华托帝‧博格达也指出，中国器官捐献与死囚器官数量，远比不上移植数量；法轮功、维族等团体，都成为中共强摘器官受害群体。
+  其中对主要股东、控股股东和实际控制人的条件中便提到，同一法人不得持有两个及以上非银行支付机构10%以上股权，且同一实际控制人不得控制两个及以上非银行支付机构。而这也意味着，在已经拥有支付牌照的情况下，按照新规定，后续将无法再收购另一张支付牌照。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -218,7 +183,22 @@
   </div>
  </center>
  <p>
-  此外，2017年11月15日，由韩国最大日报社《朝鲜日报》旗下的电视台“TV朝鲜”，播放了该台节目组制作的记录片《调查报告7》。该片以“杀了才能活”为题，揭露了自2000年以来约有两万名韩国患者去中国接受了器官移植手术，而所移植的器官大多数是来自中国的良心犯，特别是从法轮功修炼者身上强摘器官。
+  金融科技行业资深专家苏筱芮指出，此条将对巨头收购第三方支付牌照提出更高的要求，因为没有办法再通过收购更多数量的支付牌照。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  事实上，自2015年开始，中国央行开始控制支付机构的市场准入，因此很多金融公司获取第三方支付牌照，都是通过并购方式获取。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -237,9 +217,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   中共强摘器官牟取暴利 甚至按需杀人
-  </strong>
+  在分析人士看来，此次《条例》标志着中国非银行支付领域进入更严厉监管阶段，同时官方提出支付领域反垄断，将对整个市场产生深远影响。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -254,7 +232,7 @@
   </div>
  </center>
  <p>
-  而且根据《追查迫害法轮功国际组织》长期调查指出，中国存在庞大的活人器官供体库，这些主体来源涉嫌是数百万被非法抓捕的上访法轮功学员；其中，全国军、警、司法、地方医疗皆参与活摘器官的运作。
+  正如《条例》第五十五条明确规定，若一个非银行支付机构在非银行支付服务市场的市场份额达到三分之一，或两个非银行支付机构在非银行支付服务市场的市场份额合计达到二分之一，或三个非银行支付机构在非银行支付服务市场的市场份额合计达到五分之三，只要涉及前述情形之一，央行可以向国务院反垄断执法机构对其采取约谈等措施进行预警。以及采取停止滥用市场支配地位行为、停止实施集中、按照支付业务类型拆分非银行支付机构等措施。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -269,7 +247,7 @@
   </div>
  </center>
  <p>
-  2019年6月，调查中共强摘良心犯器官的英国独立人民法庭在伦敦公布的调查结果也指出，过去多年来，中共当局一直在全国范围内大规模强摘器官。
+  目前，马云控制的蚂蚁集团旗下支付宝、微信支付(腾讯金融)和银联商务分别以48.44%、33.59%和7.19%的市场份额位居前三位，三者市场份额总和达到89.21%，行业集中度较高。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -284,7 +262,7 @@
   </div>
  </center>
  <p>
-  该法庭的调查结果也提到，中国器官移植等待时间极短，所进行的移植手术数量远远超过政府和医院公布的自愿捐献器官的数据。该法庭判定，中国政府犯有摘取无辜民众器官的罪行。
+  这表明支付宝将受到最大的冲击，其次是微信支付等机构。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -299,7 +277,7 @@
   </div>
  </center>
  <p>
-  “人民法庭”声明说，强摘器官的指控于2001年首次曝光，那时在中国出现大量器官移植手术，等待器官的时间变得异常短暂。中国医院的网站宣传称，心，肺和肾这些器官可以提前预订，这表明受害者是在按需被杀害的。
+  据《北京商报》1月20日报道，苏宁金融研究院高级研究员黄大智称，“这一点对非银支付市场的影响将会非常大。因为从目前非银支付市场来看，头部两家机构的市场占有率，已经超过了监管规定的三分之二标准线。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,41 +292,7 @@
   </div>
  </center>
  <p>
-  荷兰全国性报纸《忠诚报》（Trouw）于2019年10月4日刊登报道，认为独立法庭的调查结果“非常硬实”：“中共为了摘除活人器官杀人，人依然还活着的时候被强摘器官。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  可以预见的是，未来的中国支付市场格局将会出现一定改变。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -361,6 +305,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41m3"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -378,13 +360,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/27/953819.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960135.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960135.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960135.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/24/960135.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/953819.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/960135.md' width='0px' height='0px'/>
